force-app/main/default/objects/AI_Usage_Tracking_Detail__c/AI_Usage_Tracking_Detail__c.object-meta.xml
<CustomObject>
    <label>Usage Tracking Detail</label>
    <nameField>
        <displayFormat>UTD-{000000}</displayFormat>
        <label>Usage Tracking Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Tracking Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>