force-app/main/default/objects/AI_Usage_Tracking_Detail__c/fields/AI_Calls_Count__c.field-meta.xml
<CustomField>
    <fullName>AI_Calls_Count__c</fullName>
    <label>Calls Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>