force-app/main/default/objects/AI_Usage_Tracking_Detail__c/fields/AI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>