force-app/main/default/objects/AI_Usage_Tracking_Detail__c/fields/AI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>