force-app/main/default/objects/AI_Usage_Tracking_Detail__c/fields/AI_Time_Saved__c.field-meta.xml
<CustomField>
    <fullName>AI_Time_Saved__c</fullName>
    <label>Time Saved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>