force-app/main/default/objects/AI_Usage_Tracking_Detail__c/fields/Usage_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Usage_Tracking__c</fullName>
    <label>Usage Tracking</label>
    <referenceTo>AI_Usage_Tracking__c</referenceTo>
    <relationshipLabel>Usage Tracking Details</relationshipLabel>
    <relationshipName>Usage_Tracking_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>